@@ -407,6 +407,40 @@ public final class Intersector {
 		return -1;
 	}
 
+	/**
+	 * Code from MonoGame.BoundingFrustum.IntersectionPoint
+	 * https://github.com/MonoGame/MonoGame/blob/master/MonoGame.Framework/BoundingFrustum.cs#L529
+	 *
+	 * @param a The plane a
+	 * @param b The plane b
+	 * @param c The plane c
+	 * @param intersection The point where the three planes intersect
+	 * @return Whether an intersection is present.
+	 */
+	public static boolean intersectPlanes (Plane a, Plane b, Plane c, Vector3 intersection) {
+		tmp1.set(a.normal);
+		tmp1.crs(b.normal);
+
+		tmp2.set(b.normal);
+		tmp2.crs(c.normal);
+
+		tmp3.set(c.normal);
+		tmp3.crs(a.normal);
+
+		float f = -a.normal.dot(tmp2);
+		if (Math.abs(f) < MathUtils.FLOAT_ROUNDING_ERROR) {
+			return false;
+		}
+
+		Vector3 v1 = (tmp2.scl(a.d));
+		Vector3 v2 = (tmp3.scl(b.d));
+		Vector3 v3 = (tmp1.scl(c.d));
+
+		intersection.set(v1.x + v2.x + v3.x, v1.y + v2.y + v3.y, v1.z + v2.z + v3.z);
+		intersection.scl(1 / f);
+		return true;
+	}
+
 	private static final Plane p = new Plane(new Vector3(), 0);
 	private static final Vector3 i = new Vector3();
 
